Session restore: Include seeds/curation files...
... while at it improve consistency of labels in GUI, and impact column sorting